# seclib

./: pyproject.toml
example/: example.py
src/seclib/: certificate.py  encipherment.py
test/: test.py
